src/main/java/com/github/bigdata/sql/antlr4/job/JobTaskParser.java
// Generated from com/github/bigdata/sql/antlr4/job/JobTaskParser.g4 by ANTLR 4.7
package com.github.bigdata.sql.antlr4.job;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JobTaskParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SPACE=1, SPEC_MYSQL_COMMENT=2, COMMENT_INPUT=3, LINE_COMMENT=4, SET=5, 
		UNSET=6, STAR=7, DIVIDE=8, MODULE=9, PLUS=10, MINUS=11, EQUAL_SYMBOL=12, 
		GREATER_SYMBOL=13, LESS_SYMBOL=14, EXCLAMATION_SYMBOL=15, BIT_NOT_OP=16, 
		BIT_OR_OP=17, BIT_AND_OP=18, BIT_XOR_OP=19, DOT=20, LR_BRACKET=21, RR_BRACKET=22, 
		COMMA=23, SEMI=24, DOT_ID=25, ID=26, REVERSE_QUOTE_ID=27, STRING_LITERAL=28, 
		ERROR_RECONGNIGION=29;
	public static final int
		RULE_root = 0, RULE_jobTasks = 1, RULE_jobTask = 2, RULE_jobStatement = 3, 
		RULE_resourceNameExpr = 4, RULE_classNameExpr = 5, RULE_paramsExpr = 6, 
		RULE_paramExpr = 7, RULE_fileDir = 8, RULE_setStatement = 9, RULE_unsetStatement = 10, 
		RULE_keyExpr = 11, RULE_valueExpr = 12, RULE_word = 13, RULE_emptyStatement = 14;
	public static final String[] ruleNames = {
		"root", "jobTasks", "jobTask", "jobStatement", "resourceNameExpr", "classNameExpr", 
		"paramsExpr", "paramExpr", "fileDir", "setStatement", "unsetStatement", 
		"keyExpr", "valueExpr", "word", "emptyStatement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, "'SET'", "'UNSET'", "'*'", "'/'", "'%'", 
		"'+'", "'-'", "'='", "'>'", "'<'", "'!'", "'~'", "'|'", "'&'", "'^'", 
		"'.'", "'('", "')'", "','", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "SPACE", "SPEC_MYSQL_COMMENT", "COMMENT_INPUT", "LINE_COMMENT", 
		"SET", "UNSET", "STAR", "DIVIDE", "MODULE", "PLUS", "MINUS", "EQUAL_SYMBOL", 
		"GREATER_SYMBOL", "LESS_SYMBOL", "EXCLAMATION_SYMBOL", "BIT_NOT_OP", "BIT_OR_OP", 
		"BIT_AND_OP", "BIT_XOR_OP", "DOT", "LR_BRACKET", "RR_BRACKET", "COMMA", 
		"SEMI", "DOT_ID", "ID", "REVERSE_QUOTE_ID", "STRING_LITERAL", "ERROR_RECONGNIGION"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JobTaskParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JobTaskParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RootContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(JobTaskParser.EOF, 0); }
		public JobTasksContext jobTasks() {
			return getRuleContext(JobTasksContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).exitRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobTaskParserVisitor ) return ((JobTaskParserVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SET) | (1L << UNSET) | (1L << DIVIDE) | (1L << SEMI) | (1L << ID))) != 0)) {
				{
				setState(30);
				jobTasks();
				}
			}

			setState(33);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JobTasksContext extends ParserRuleContext {
		public List<JobTaskContext> jobTask() {
			return getRuleContexts(JobTaskContext.class);
		}
		public JobTaskContext jobTask(int i) {
			return getRuleContext(JobTaskContext.class,i);
		}
		public List<EmptyStatementContext> emptyStatement() {
			return getRuleContexts(EmptyStatementContext.class);
		}
		public EmptyStatementContext emptyStatement(int i) {
			return getRuleContext(EmptyStatementContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(JobTaskParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(JobTaskParser.SEMI, i);
		}
		public JobTasksContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jobTasks; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).enterJobTasks(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).exitJobTasks(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobTaskParserVisitor ) return ((JobTaskParserVisitor<? extends T>)visitor).visitJobTasks(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JobTasksContext jobTasks() throws RecognitionException {
		JobTasksContext _localctx = new JobTasksContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_jobTasks);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(39);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case SET:
					case UNSET:
					case DIVIDE:
					case ID:
						{
						setState(35);
						jobTask();
						setState(36);
						match(SEMI);
						}
						break;
					case SEMI:
						{
						setState(38);
						emptyStatement();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(43);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(49);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SET:
			case UNSET:
			case DIVIDE:
			case ID:
				{
				setState(44);
				jobTask();
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMI) {
					{
					setState(45);
					match(SEMI);
					}
				}

				}
				break;
			case SEMI:
				{
				setState(48);
				emptyStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JobTaskContext extends ParserRuleContext {
		public SetStatementContext setStatement() {
			return getRuleContext(SetStatementContext.class,0);
		}
		public UnsetStatementContext unsetStatement() {
			return getRuleContext(UnsetStatementContext.class,0);
		}
		public JobStatementContext jobStatement() {
			return getRuleContext(JobStatementContext.class,0);
		}
		public JobTaskContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jobTask; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).enterJobTask(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).exitJobTask(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobTaskParserVisitor ) return ((JobTaskParserVisitor<? extends T>)visitor).visitJobTask(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JobTaskContext jobTask() throws RecognitionException {
		JobTaskContext _localctx = new JobTaskContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_jobTask);
		try {
			setState(54);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SET:
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				setStatement();
				}
				break;
			case UNSET:
				enterOuterAlt(_localctx, 2);
				{
				setState(52);
				unsetStatement();
				}
				break;
			case DIVIDE:
			case ID:
				enterOuterAlt(_localctx, 3);
				{
				setState(53);
				jobStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JobStatementContext extends ParserRuleContext {
		public ResourceNameExprContext resourceNameExpr() {
			return getRuleContext(ResourceNameExprContext.class,0);
		}
		public ClassNameExprContext classNameExpr() {
			return getRuleContext(ClassNameExprContext.class,0);
		}
		public ParamsExprContext paramsExpr() {
			return getRuleContext(ParamsExprContext.class,0);
		}
		public JobStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jobStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).enterJobStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).exitJobStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobTaskParserVisitor ) return ((JobTaskParserVisitor<? extends T>)visitor).visitJobStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JobStatementContext jobStatement() throws RecognitionException {
		JobStatementContext _localctx = new JobStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_jobStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			resourceNameExpr();
			setState(57);
			classNameExpr();
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIVIDE) | (1L << ID) | (1L << STRING_LITERAL))) != 0)) {
				{
				setState(58);
				paramsExpr();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ResourceNameExprContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(JobTaskParser.ID, 0); }
		public List<TerminalNode> DOT_ID() { return getTokens(JobTaskParser.DOT_ID); }
		public TerminalNode DOT_ID(int i) {
			return getToken(JobTaskParser.DOT_ID, i);
		}
		public FileDirContext fileDir() {
			return getRuleContext(FileDirContext.class,0);
		}
		public ResourceNameExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resourceNameExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).enterResourceNameExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).exitResourceNameExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobTaskParserVisitor ) return ((JobTaskParserVisitor<? extends T>)visitor).visitResourceNameExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ResourceNameExprContext resourceNameExpr() throws RecognitionException {
		ResourceNameExprContext _localctx = new ResourceNameExprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_resourceNameExpr);
		int _la;
		try {
			setState(69);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				match(ID);
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==DOT_ID) {
					{
					{
					setState(62);
					match(DOT_ID);
					}
					}
					setState(67);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case DIVIDE:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				fileDir();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassNameExprContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(JobTaskParser.ID, 0); }
		public List<TerminalNode> DOT_ID() { return getTokens(JobTaskParser.DOT_ID); }
		public TerminalNode DOT_ID(int i) {
			return getToken(JobTaskParser.DOT_ID, i);
		}
		public ClassNameExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classNameExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).enterClassNameExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).exitClassNameExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobTaskParserVisitor ) return ((JobTaskParserVisitor<? extends T>)visitor).visitClassNameExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassNameExprContext classNameExpr() throws RecognitionException {
		ClassNameExprContext _localctx = new ClassNameExprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_classNameExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(ID);
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT_ID) {
				{
				{
				setState(72);
				match(DOT_ID);
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsExprContext extends ParserRuleContext {
		public List<ParamExprContext> paramExpr() {
			return getRuleContexts(ParamExprContext.class);
		}
		public ParamExprContext paramExpr(int i) {
			return getRuleContext(ParamExprContext.class,i);
		}
		public ParamsExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramsExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).enterParamsExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).exitParamsExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobTaskParserVisitor ) return ((JobTaskParserVisitor<? extends T>)visitor).visitParamsExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsExprContext paramsExpr() throws RecognitionException {
		ParamsExprContext _localctx = new ParamsExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_paramsExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			paramExpr();
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DIVIDE) | (1L << ID) | (1L << STRING_LITERAL))) != 0)) {
				{
				{
				setState(79);
				paramExpr();
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamExprContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(JobTaskParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(JobTaskParser.ID, i);
		}
		public List<TerminalNode> DOT_ID() { return getTokens(JobTaskParser.DOT_ID); }
		public TerminalNode DOT_ID(int i) {
			return getToken(JobTaskParser.DOT_ID, i);
		}
		public FileDirContext fileDir() {
			return getRuleContext(FileDirContext.class,0);
		}
		public TerminalNode STRING_LITERAL() { return getToken(JobTaskParser.STRING_LITERAL, 0); }
		public ParamExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).enterParamExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).exitParamExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobTaskParserVisitor ) return ((JobTaskParserVisitor<? extends T>)visitor).visitParamExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamExprContext paramExpr() throws RecognitionException {
		ParamExprContext _localctx = new ParamExprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_paramExpr);
		int _la;
		try {
			int _alt;
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				match(ID);
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==DOT_ID) {
					{
					{
					setState(86);
					match(DOT_ID);
					}
					}
					setState(91);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				fileDir();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				match(ID);
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==DOT_ID) {
					{
					{
					setState(94);
					match(DOT_ID);
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(100);
						match(DIVIDE);
						setState(102);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==DIVIDE) {
							{
							setState(101);
							match(DIVIDE);
							}
						}

						setState(104);
						match(ID);
						setState(108);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==DOT_ID) {
							{
							{
							setState(105);
							match(DOT_ID);
							}
							}
							setState(110);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						}
						} 
					}
					setState(115);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(116);
				match(STRING_LITERAL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FileDirContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(JobTaskParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(JobTaskParser.ID, i);
		}
		public List<TerminalNode> DOT_ID() { return getTokens(JobTaskParser.DOT_ID); }
		public TerminalNode DOT_ID(int i) {
			return getToken(JobTaskParser.DOT_ID, i);
		}
		public FileDirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fileDir; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).enterFileDir(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).exitFileDir(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobTaskParserVisitor ) return ((JobTaskParserVisitor<? extends T>)visitor).visitFileDir(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileDirContext fileDir() throws RecognitionException {
		FileDirContext _localctx = new FileDirContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_fileDir);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(DIVIDE);
			setState(120);
			match(ID);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT_ID) {
				{
				{
				setState(121);
				match(DOT_ID);
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(140);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,20,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(127);
					match(DIVIDE);
					setState(136);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case ID:
						{
						setState(128);
						match(ID);
						setState(132);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==DOT_ID) {
							{
							{
							setState(129);
							match(DOT_ID);
							}
							}
							setState(134);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						}
						break;
					case STAR:
						{
						setState(135);
						match(STAR);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					} 
				}
				setState(142);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,20,_ctx);
			}
			setState(144);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
			case 1:
				{
				setState(143);
				match(DIVIDE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetStatementContext extends ParserRuleContext {
		public ValueExprContext value;
		public TerminalNode SET() { return getToken(JobTaskParser.SET, 0); }
		public KeyExprContext keyExpr() {
			return getRuleContext(KeyExprContext.class,0);
		}
		public TerminalNode EQUAL_SYMBOL() { return getToken(JobTaskParser.EQUAL_SYMBOL, 0); }
		public ValueExprContext valueExpr() {
			return getRuleContext(ValueExprContext.class,0);
		}
		public SetStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).enterSetStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).exitSetStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobTaskParserVisitor ) return ((JobTaskParserVisitor<? extends T>)visitor).visitSetStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetStatementContext setStatement() throws RecognitionException {
		SetStatementContext _localctx = new SetStatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_setStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(SET);
			setState(147);
			keyExpr();
			setState(148);
			match(EQUAL_SYMBOL);
			setState(149);
			((SetStatementContext)_localctx).value = valueExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnsetStatementContext extends ParserRuleContext {
		public TerminalNode UNSET() { return getToken(JobTaskParser.UNSET, 0); }
		public KeyExprContext keyExpr() {
			return getRuleContext(KeyExprContext.class,0);
		}
		public UnsetStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unsetStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).enterUnsetStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).exitUnsetStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobTaskParserVisitor ) return ((JobTaskParserVisitor<? extends T>)visitor).visitUnsetStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnsetStatementContext unsetStatement() throws RecognitionException {
		UnsetStatementContext _localctx = new UnsetStatementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_unsetStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(UNSET);
			setState(152);
			keyExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KeyExprContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(JobTaskParser.ID, 0); }
		public List<TerminalNode> DOT_ID() { return getTokens(JobTaskParser.DOT_ID); }
		public TerminalNode DOT_ID(int i) {
			return getToken(JobTaskParser.DOT_ID, i);
		}
		public KeyExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_keyExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).enterKeyExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JobTaskParserListener ) ((JobTaskParserListener)listener).exitKeyExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JobTaskParserVisitor ) return ((JobTaskParserVisitor<? extends T>)visitor).visitKeyExpr(this);
			else return visitor.visitChildren(this);
		}
	}
